--- a/requirements.txt
+++ b/requirements.txt
@@ -36,3 +36,47 @@ typing_extensions==4.7.1
 urllib3==1.26.16
 wcwidth==0.2.6
 Werkzeug==2.3.7
+appnope==0.1.3
+asttokens==2.4.0
+backcall==0.2.0
+blinker==1.6.2
+boto3==1.28.41
+botocore==1.31.41
+click==8.1.7
+decorator==5.1.1
+exceptiongroup==1.1.3
+executing==1.2.0
+exif==1.6.0
+Flask==2.3.3
+Flask-DebugToolbar==0.13.1
+Flask-SQLAlchemy==3.0.5
+geographiclib==2.0
+geopy==2.4.0
+greenlet==2.0.2
+ipython==8.15.0
+itsdangerous==2.1.2
+jedi==0.19.0
+Jinja2==3.1.2
+jmespath==1.0.1
+MarkupSafe==2.1.3
+matplotlib-inline==0.1.6
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+plum-py==0.8.7
+prompt-toolkit==3.0.39
+psycopg2-binary==2.9.7
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.16.1
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+s3transfer==0.6.2
+six==1.16.0
+SQLAlchemy==2.0.20
+stack-data==0.6.2
+traitlets==5.9.0
+typing_extensions==4.7.1
+urllib3==1.26.16
+wcwidth==0.2.6
+Werkzeug==2.3.7
